started on the test editor

--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -106,19 +106,19 @@
 
           <!-- Month -->
           <select id="testMonth" class = 'mainInput'>
-            <option value="January">January</option>
-            <option value="February">February</option>
-            <option value="March">March</option>
-            <option value="April">April</option>
-            <option value="May">May</option>
-            <option value="June">June</option>
-            <option value="July">July</option>
-            <option value="August">August</option>
-            <option value="September">September</option>
-            <option value="October">October</option>
-            <option value="November">November</option>
-            <option value="December">December</option>
-            <option value="Practice">Practice</option>
+            <option value="01">January</option>
+            <option value="02">February</option>
+            <option value="03">March</option>
+            <option value="04">April</option>
+            <option value="05">May</option>
+            <option value="06">June</option>
+            <option value="07">July</option>
+            <option value="08">August</option>
+            <option value="09">September</option>
+            <option value="10">October</option>
+            <option value="11">November</option>
+            <option value="12">December</option>
+            <option value="00">Practice</option>
           </select>
 
           <!-- Code -->
@@ -157,10 +157,6 @@
 
           <!-- Section -->
           <select id="passageSection" class = 'mainInput'>
-            <option value="english">English</option>
-            <option value="math">Math</option>
-            <option value="reading">Reading</option>
-            <option value="science">Science</option>
           </select>
 
           <!-- Passage -->
