updated email template

--- a/email-templates/Student-Free.html
+++ b/email-templates/Student-Free.html
@@ -26,8 +26,28 @@
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             Based on your responses to our questionnaire, I have put together various resources that will help you prepare for the ACT.
           </p>
+
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Using the link below, you will have access to 2 FREE full length ACT tests! They will be broken into individual sections, so you can 
+            First of all, I strongly recommend you take advantage of our FREE ACT program previews, link below. In this preview, you will sit 
+            down one-on-one with one of our expert tutors where you will receive personalized instruction, tips, and strategies to conquer the ACT at no cost to you!
+          </p>
+
+    <table role="presentation" border="0" width="100%" cellspacing="0" style = 'margin-bottom: 1em'>
+      <tr>
+        <td align="center">
+          <table role="presentation" align="center" border="0" cellspacing="0">
+            <tr>
+              <td align="center" bgcolor="#27c03a" style="border-radius: .5em;">
+                <a style="font-size: 1em; text-decoration: none; color: white; padding: .5em 1em; border-radius: .5em; display: inline-block; border: 1px solid #27c03a;" href="https://calendly.com/duncanmorais">Schedule Preview</a>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
+            Additionally, using the link below, you will have access to 2 FREE full length ACT tests! They will be broken into individual sections, so you can 
             take any section of the ACT independently of the others, or you can take them in succession to simulate an actual ACT test. The 
             best way to prepare for any test is to practice, practice, practice!
           </p>
@@ -47,28 +67,10 @@
     </table>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Additionally, I'll be sending you our FREE ACT lesson series which is a 12-week ACT prep course. This series will cover the 3 most 
+            Finally, I'll be sending you our FREE ACT lesson series which is a 12-week ACT prep course. This series will cover the 3 most 
             important topics for each section of the ACT. You will learn how to identify various questions found on the ACT as well as our proven 
             approach to each of these questions.
           </p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Finally, I strongly recommend you take advantage of our FREE ACT program previews, link below. In this preview, you will sit 
-            down one-on-one with one of our expert tutors where you will receive personalized instruction, tips, and strategies to conquer the ACT!
-          </p>
-
-    <table role="presentation" border="0" width="100%" cellspacing="0" style = 'margin-bottom: 1em'>
-      <tr>
-        <td align="center">
-          <table role="presentation" align="center" border="0" cellspacing="0">
-            <tr>
-              <td align="center" bgcolor="#27c03a" style="border-radius: .5em;">
-                <a style="font-size: 1em; text-decoration: none; color: white; padding: .5em 1em; border-radius: .5em; display: inline-block; border: 1px solid #27c03a;" href="https://calendly.com/duncanmorais">Schedule Preview</a>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             For more information or to schedule one of our guaranteed programs, give us a call at <a href="tel:+13853000906" style="text-decoration: underline; font-weight: bold; color: #253342;">(385) 300-0906</a>. I'm excited to help get you 
