--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -333,10 +333,6 @@
 
           <!-- Section -->
           <select id="answersSection" class = 'mainInput'>
-            <option value="english">English</option>
-            <option value="math">Math</option>
-            <option value="reading">Reading</option>
-            <option value="science">Science</option>
           </select>
 
           <!-- Save Test Button -->
@@ -373,10 +369,6 @@
 
           <!-- Section -->
           <select id="scaledScoresSection" class = 'mainInput'>
-            <option value="english">English</option>
-            <option value="math">Math</option>
-            <option value="reading">Reading</option>
-            <option value="science">Science</option>
           </select>
 
           <!-- Save Test Button -->
@@ -416,10 +408,6 @@
 
           <!-- Section -->
           <select id="questionsSection" class = 'mainInput'>
-            <option value="english">English</option>
-            <option value="math">Math</option>
-            <option value="reading">Reading</option>
-            <option value="science">Science</option>
           </select>
 
           <!-- Passage -->
@@ -446,9 +434,9 @@
             <select class='hidden' id="subTopic">
             </select>-->
 
-            <label for="modifier" id='modifierLabel'>Modifier(s)</label>
+            <!-- <label for="modifier" id='modifierLabel'>Modifier(s)</label>
             <select class='ui dropdown search multiple' multiple id="modifier" style = 'display:none'>
-            </select>
+            </select> -->
 
           </div>
 
