--- a/public/pricing.html
+++ b/public/pricing.html
@@ -913,16 +913,18 @@
                 <p class="one-time">1 payment of $1080 which includes a $135 deposit**</p>
               </div>
               <div class="length">
-                <h4>ACT Basics</h4>
+                <h4>Guided ACT</h4>
                 <h5>16 hours</h5>
               </div>
               <ul>
                 <li><strong>One-on-One</strong> Personalized Tutoring</li>
                 <li>All tutors have scored in the <strong>top 1%</strong> (34+)</li>
+                <li>Adaptive Learning Intelligence</li>
                 <li><strong>2000+</strong> ACT test questions</li>
                 <li>End right before an official test</li>
                 <li>2 full length ACT practice tests</li>
-                <li>16 section practice homeworks</li>
+                <li>8 section practice homeworks</li>
+                <li>8 hours of topic specific lessons</li>
                 <li>Time management skills</li>
                 <li>Test tips and strategies</li>
               </ul>
@@ -954,7 +956,7 @@
               </div>
               <ul>
                 <li><strong>One-on-One</strong> Personalized Tutoring</li>
-                <li>All tutors have scored <strong>perfect scores</strong> (36)</li>
+                <li>All tutors have scored in the <strong>top 1%</strong> (34+)</li>
                 <li>Adaptive Learning Intelligence</li>
                 <li><strong>2000+</strong> ACT test questions</li>
                 <li>End right before an official test</li>
@@ -992,7 +994,7 @@
               </div>
               <ul>
                 <li><strong>One-on-One</strong> Personalized Tutoring</li>
-                <li>All tutors have scored <strong>perfect scores</strong> (36)</li>
+                <li>All tutors have scored in the <strong>top 1%</strong> (34+)</li>
                 <li>Adaptive Learning Intelligence</li>
                 <li><strong>2000+</strong> ACT test questions</li>
                 <li>End right before an official test</li>
