updated emails to use program preview button

--- a/email-templates/act-lesson-series/lesson-4.html
+++ b/email-templates/act-lesson-series/lesson-4.html
@@ -145,12 +145,25 @@
 
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
-        <td style="padding: 30px 0px 30px 0px;">
+        <td style="padding: 15px 0px 0px 0px;">
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             Want more? Get up to 2 hours of <b>FREE</b> personalized 1-on-1 ACT tutoring with one of our professional tutors. 
-            To sign up, call us at <a href="tel:+13853000906" style="text-decoration: underline; font-weight: bold; color: #27c03a;">(385)-300-0906</a>. 
-            Visit <a href="https://lyrnwithus.com/pricing" style="text-decoration: underline; font-weight: bold; color: #27c03a;">our website</a> for more details.
+            To sign up, use the link below.
           </p>
+        </td>
+      </tr>
+    </table>
+
+    <table role="presentation" border="0" width="100%" cellspacing="0" style = 'margin-bottom: 2em'>
+      <tr>
+        <td align="center">
+          <table role="presentation" align="center" border="0" cellspacing="0">
+            <tr>
+              <td align="center" bgcolor="#27c03a" style="border-radius: .5em;">
+                <a style="font-size: 1em; text-decoration: none; color: white; padding: .5em 1em; border-radius: .5em; display: inline-block; border: 1px solid #27c03a;" href="https://calendly.com/duncanmorais">Schedule Preview</a>
+              </td>
+            </tr>
+          </table>
         </td>
       </tr>
     </table>
