--- a/public/why.html
+++ b/public/why.html
@@ -8,6 +8,21 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-N393M5F');</script>
     <!-- End Google Tag Manager -->
+    <!-- Free Resources -->
+    <script>
+      function gtag_report_conversion_resources(url) {
+        var callback = function () {
+          if (typeof(url) != 'undefined') {
+            window.location = url;
+          }
+        };
+        gtag('event', 'conversion', {
+            'send_to': 'AW-10828068158/IkcBCMTa_coDEL7qnKso',
+            'event_callback': callback
+        });
+        return false;
+      }
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Why should you choose Lyrn over other tutoring comapnies.">
@@ -87,7 +102,7 @@
         <p>Enter your email so we can send you your custom link to take the tests.</p>
         <input type="email" placeholder="email">
         <p class="error"></p>
-        <button class="submit" onclick="submitPracticeTestRequest(event)">Ready to Lyrn</button>
+        <button class="submit" onclick="submitPracticeTestRequest(event); gtag_report_conversion_resources()">Ready to Lyrn</button>
       </div>
     </div>
 
@@ -107,7 +122,7 @@
         <p>Enter your email so we can send you your custom lesson series.</p>
         <input type="email" placeholder="email">
         <p class="error"></p>
-        <button class="submit" onclick="submitLessonSeriesRequest(event)">Ready to Lyrn</button>
+        <button class="submit" onclick="submitLessonSeriesRequest(event); gtag_report_conversion_resources()">Ready to Lyrn</button>
       </div>
     </div>
 
