--- a/email-templates/Student-Free-receivedTestsAlready.html
+++ b/email-templates/Student-Free-receivedTestsAlready.html
@@ -19,17 +19,17 @@
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
         <td style="padding: 30px 0px 30px 0px;">
-          <h2 style="font-size: 28px; margin:0 0 20px 0;">Guaranteed 4+ Point ACT Program</h2>
+          <h2 style="font-size: 28px; margin:0 0 20px 0;">FREE ACT Resources</h2>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             Hey XXXXXX,
           </p>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Based on your responses to our questionnaire, I have created the ideal path that will help you prepare for the ACT.
+            Based on your responses to our questionnaire, I have put together various resources that will help you prepare for the ACT.
           </p>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            First of all, I highly recommend that you take advantage of our FREE ACT program previews (link below) before signing up for our 4-point guaranteed program. In this preview, you will sit 
-            down one-on-one with one of our expert tutors where you will receive personalized instruction, tips, and strategies to conquer the ACT!
+            First of all, I strongly recommend you take advantage of our FREE ACT program previews, link below. In this preview, you will sit 
+            down one-on-one with one of our expert tutors where you will receive personalized instruction, tips, and strategies to conquer the ACT at no cost to you!
           </p>
 
     <table role="presentation" border="0" width="100%" cellspacing="0" style = 'margin-bottom: 1em'>
@@ -47,15 +47,15 @@
     </table>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Our programs have been optimized to maximize your point increase on the ACT. Rather than a preset curriculum path that you will see with most other ACT prep courses (the same  
-            path and material as every other student), the pace and course is set by you! We adapt to your needs and strengths. You will learn to identify question types on the ACT and the 
-            most efficient approach to those questions. You will learn techniques and strategies that will enhance both timing and accuracy. You will see hundreds of actual ACT 
-            problems. With the 4-point guaranteed program, you can expect to increase your ACT score by 4 - 6 points! This could make a HUGE difference when applying for colleges and when 
-            qualifying for scholarships.
+            Additionally, I'll be sending you our FREE ACT lesson series which is a 12-week ACT prep course. This series will cover the 3 most 
+            important topics for each section of the ACT. You will learn how to identify various questions found on the ACT as well as our proven 
+            approach to each of these questions.
           </p>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            For more information or to schedule your 4-point guaranteed program, give us a call at <a href="tel:+13853000906" style="text-decoration: underline; font-weight: bold; color: #253342;">(385) 300-0906</a>. I'm excited to help get you 
+            Finally, the average college graduate in Utah will acquire over $30,000 in student loans. However, by raising your ACT score 4 to 6 points, you could save tens of 
+            thousands of dollars in scholarship money, housing, books, and fees! For more information or to schedule your 4+ guarantee program, give us a call at 
+            <a href="tel:+13853000906" style="text-decoration: underline; font-weight: bold; color: #253342;">(385) 300-0906</a>. I'm excited to help get you 
             started on your ACT journey! If you have any questions along the way, please reach out!
           </p>
           </div>
