--- a/email-templates/Student-PostPP-U of U.html
+++ b/email-templates/Student-PostPP-U of U.html
@@ -24,34 +24,28 @@
             Hey XXXXXX,
           </p>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Based on your responses to our questionnaire, I have created the ideal path that will help you prepare for the ACT.
+            I'm following up from your program preview with Duncan and with the questionnaire you filled out on our website. 
+            I heard that you are considering attending the University of Utah! I'm slightly biased having attended the U myself, but it's a fantastic choice!
           </p>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            First of all, I highly recommend that you take advantage of our FREE ACT program previews (link below) before signing up for our 4-point guaranteed program. In this preview, you will sit 
-            down one-on-one with one of our expert tutors where you will receive personalized instruction, tips, and strategies to conquer the ACT!
+            Although the ACT is NOT required to attend the University of Utah, it is recommended. Thus, I would highly encourage you to take the ACT and to send your 
+            scores with your application. Where this isn't required, it is an additional item that will help you stand out from the rest of the applicants, and the better 
+            your score, the more likely you are to be accepted!
           </p>
 
-    <table role="presentation" border="0" width="100%" cellspacing="0" style = 'margin-bottom: 1em'>
-      <tr>
-        <td align="center">
-          <table role="presentation" align="center" border="0" cellspacing="0">
-            <tr>
-              <td align="center" bgcolor="#27c03a" style="border-radius: .5em;">
-                <a style="font-size: 1em; text-decoration: none; color: white; padding: .5em 1em; border-radius: .5em; display: inline-block; border: 1px solid #27c03a;" href="https://calendly.com/duncanmorais">Schedule Preview</a>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
+            Even though the ACT isn't required for admittance, it is required for the U merit scholarships. Thus, if you are looking for scholarships to help pay for 
+            college, increasing your ACT score is one of the best things you can do! The average Utah college graduate acquires over $30,000 of student loans. Thus, 
+            increasing your ACT by 4 - 6 points could save thousands, if not tens of thousands of dollars.
+          </p>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Our programs have been optimized to maximize your point increase on the ACT. Rather than a preset curriculum path that you will see with most other ACT prep courses (the same  
-            path and material as every other student), the pace and course is set by you! We adapt to your needs and strengths. You will learn to identify question types on the ACT and the 
-            most efficient approach to those questions. You will learn techniques and strategies that will enhance both timing and accuracy. You will see hundreds of actual ACT 
-            problems. With the 4-point guaranteed program, you can expect to increase your ACT score by 4 - 6 points! This could make a HUGE difference when applying for colleges and when 
-            qualifying for scholarships.
+            Finally, our programs have been optimized to maximize your point increase on the ACT. Rather than a preset curriculum path that you will see with most other 
+            ACT prep courses (the same path and material as every other student), the pace and course is set by you! We adapt to your needs and strengths. You will learn to 
+            identify question types on the ACT and the most efficient approach to those questions. You will learn techniques and strategies that will enhance both timing and 
+            accuracy. You will see hundreds of actual ACT problems. With the 4-point guaranteed program, you can expect to increase your ACT score by 4 - 6 points! This could 
+            make a HUGE difference when applying to the U and when qualifying for scholarships.
           </p>
 
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
