leaving for the trip

--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -41,30 +41,58 @@
       <input class="input" type="text" id="nameSearch">
       <div id="nameSearchResults"></div>
 
-      <label for="testList">Test</label>
-      <select class="input" id="testList"></select>
+      <p style="margin: .5em .5em .5em 0; display: inline-block;">Generate assignment</p>
+      <input type="radio" name="assignmentType" id="bySection" value="section" checked>
+      <label for="bySection" style="margin: 0 .5em 0 0;">by section</label>
+      <input type="radio" name="assignmentType" id="byTopic" value="topic">
+      <label for="byTopic">by topic</label>
 
-      <label for="sections">Section</label>
-      <select class="input" id="sections">
-        <option value="english">English</option>
-        <option value="math">Math</option>
-        <option value="reading">Reading</option>
-        <option value="science">Science</option>
-        <option value="all">All</option>
-      </select>
+      <div class="by-section-wrapper">
+        <label for="tests">Test</label>
+        <select class="input" id="tests" onchange="getSections(event)"></select>
+      
+        <label for="sections">Section</label>
+        <select class="input" id="sections"></select>
+      </div>
+
+      <div class="by-topic-wrapper">
+        <label for="sectionCodes">Section</label>
+        <select class="input" id="sectionCodes" onchange="showCurriculum(event)">
+          <option value="" selected disabled>select a section</option>
+          <option value="english">english</option>
+          <option value="math">math</option>
+          <option value="reading">reading</option>
+          <option value="science">science</option>
+        </select>
+
+        <label for="topics">Topics</label>
+        <div id="topicWrapper">
+          <div id="englishTopics"></div>
+          <div id="mathTopics"></div>
+          <div id="readingTopics"></div>
+          <div id="scienceTopics"></div>
+        </div>
+
+        <label for="count">Number of Questions</label>
+        <input type="number" class="input" id="count" min="0">
+      </div>
 
       <label for="open">Open</label>
-      <input class="input" id="open"></input>
+      <input class="input" id="open">
       <label for="close">Close</label>
-      <input class="input" id="close"></input>
+      <input class="input" id="close">
 
-      <label for="programs">Program</label>
-      <select class="input" id="programs">
-        <option value="actClass">ACT Class</option>
-        <option value="actStudyGroup">ACT Study Group</option>
-        <option value="actBasics">ACT Basics</option>
-        <option value="actGuided">Guided ACT</option>
-        <option value="practiceTest">Practice Test</option>
+      <label for="time">Time (in minutes)</label>
+      <input type="number" class="input" id="time" min="0">
+
+      <label for="types">Type</label>
+      <select class="input" id="types">
+        <option value="" disabled selected>select a type</option>
+        <option value="guarantee">Guarantee</option>
+        <option value="marketing">Marketing</option>
+        <option value="daily">Daily</option>
+        <option value="homework">Homework</option>
+        <option value="worksheet">Worksheet</option>
         <option value="tutor">Tutor</option>
       </select>
 
