--- a/public/customer-dashboard.html
+++ b/public/customer-dashboard.html
@@ -52,7 +52,7 @@
           <a href="new-parent.html" data-query="parent">Parent Info</a>
           <a href="act-sign-up.html" data-query="student,parent">New Program</a>
           <a href="/Forms/ACT Daily Log/Daily Log.html" data-query="student">Daily Log</a>
-          <a href="test-taker.html" data-query="student">Test Taker</a>
+          <a href="test-taker.html" data-path="student">Test Taker</a>
           <a href="payment.html" data-query="parent">Payments</a>
         </div>
       </nav>
