--- a/email-templates/act-lesson-series/lesson-8.html
+++ b/email-templates/act-lesson-series/lesson-8.html
@@ -1,6 +1,32 @@
 <head>
   <style>
     @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600&display=swap');
+.table {
+	border-collapse: collapse;
+	border-style: solid;
+	border-color: black;
+	border-width: 2px;
+
+  -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
+  page-break-inside: avoid; /* Firefox */
+  break-inside: avoid; /* IE 10+ */
+
+  margin-bottom: 1em;
+}
+
+.table th {
+	text-align: center;
+	padding: 4px 8px 4px 8px;
+	border: 2px solid black;
+}
+
+.table td {
+	text-align: center;
+	border: 1px solid #e3e3e3;
+  border-right: 2px solid black;
+	padding: 4px 8px;
+}
+
   </style>
 </head>
 <body style="font-family: 'proxima-nova', sans-serif;">
@@ -18,37 +44,44 @@
   
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
-        <td style="padding: 30px 0px 0px 0px;">
-          <h2 style="font-size: 28px; margin:0 0 20px 0;">FREE Online ACT Prep Series</h2>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
-            Welcome to our free online ACT prep course. 
-            We will be covering the 3 most important topics for all four sections of the ACT (English, Math, Reading, and Science). 
-            In this series, you will learn 
-            1) how to identify questions related to each topic, 
-            2) the relevant knowledge needed to attack each problem, and 
-            3) the most efficient way to approach each question.
-            Additionally, you will see example problems from actual ACT tests with complete breakdowns.
-          </p>
-        </td>
-      </tr>
-    </table>
-
-    <table role="presentation" border="0" width="100%" cellspacing="0">
-      <tr>
         <td style="padding: 30px 0px 30px 0px;">
-          <h2 style="font-size: 28px; margin:0 0 20px 0;">Outline</h2>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 1 — English: Connotation</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 2 — Math: Logic</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 3 — Reading: Focused Reading</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 4 — Science: Reasoned Answer</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 5 — English: Simplicity</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 6 — Math: Units</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 7 — Reading: Context Clues</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 8 — Science: Conflicting Viewpoints</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 9 — English: Sentence Composition</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 10 — Math: Polygons</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 11 — Reading: Main Idea</p>
-          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">Lesson 12 — Science: Graph Reading</p>
+          <h2 style="font-size: 28px; margin:0 0 20px 0;">Science - Conflicting Viewpoint</h2>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
+            Conflicting Viewpoints is the second most important topic on the Science section of the ACT. Rather than being a question type, conflicting viewpoints 
+            is a passage type that will always contain 7 questions. This passage rarely contains tables, charts, or figures but rather contains various 
+            'viewpoints': usually students, scientists, or hypotheses.
+          </p>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
+            When approaching this section, you will begin by skimming each question and labeling them according to the viewpoint(s) required to answer the question: 
+            1, 2, 1 + 3, <u>A</u>ll, <u>N</u>one, etc. Once all questions have been labeled, read the intro text then answer any questions labeled with an N (None). 
+            Next, read viewpoint one then answer the questions labeled with 1; read viewpoint 2 and answer questions labeled with 2 then questions labeled with 1 and 2. 
+            Continue this process until all questions have been answered.
+          </p>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
+            For example,
+          </p>
+          <div style="margin: 0 36px;">
+            <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;text-indent: 50px;">
+              Student 2 indicates that the hyphae of a GPM are primarily involved in producing:
+            </p>
+          <table class="table" align="center">
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
+              <b>A.</b> energy.
+            </p>
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
+              <b>B.</b> spores.
+            </p>
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
+              <b>C.</b> toxins.
+            </p>
+            <p style="margin:0 0 12px 24px;font-size:16px;line-height:24px;">
+              <b>D.</b> offspring.
+            </p>
+          </div>
+          <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
+            In this question, we see that we are concerned with Student 2's viewpoint, and only their viewpoint. Thus, we would label this question with a 2 and would 
+            answer this question after we read student 2's point of view.
+          </p>
         </td>
       </tr>
     </table>
@@ -77,7 +110,7 @@
         </td>
       </tr>
     </table>
-
+    
 
     <table role="presentation" border="0" width="100%">
       <tr>
