--- a/public/customer-dashboard.html
+++ b/public/customer-dashboard.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
-    <link href="customer-dashboard.css" rel="stylesheet">
-    <link href="Site Templates/site-wide.css" rel="stylesheet">
+    <link href="../customer-dashboard.css" rel="stylesheet">
+    <link href="../Site Templates/site-wide.css" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -24,10 +24,10 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
 
-    <script src="Site Templates/site-wide.js"></script>
-    <script src="Site Templates/formatting.js" defer></script>
-    <script src="Site Templates/generalFunctions.js" defer></script>
-    <script src="customer-dashboard.js" defer></script>
+    <script src="../Site Templates/site-wide.js"></script>
+    <script src="../Site Templates/formatting.js" defer></script>
+    <script src="../Site Templates/generalFunctions.js" defer></script>
+    <script src="../customer-dashboard.js" defer></script>
   </head>
 
   <body>
@@ -48,12 +48,12 @@
           </svg>
         </a>
         <div class="links">
-          <a href="new-student.html" data-query="student">Student Info</a>
-          <a href="new-parent.html" data-query="parent">Parent Info</a>
-          <a href="act-sign-up.html" data-query="student,parent">New Program</a>
-          <a href="/Forms/ACT Daily Log/Daily Log.html" data-query="student">Daily Log</a>
-          <a href="test-taker.html" data-path="student">Test Taker</a>
-          <a href="payment.html" data-query="parent">Payments</a>
+          <a href="../new-student.html" data-query="student">Student Info</a>
+          <a href="../new-parent.html" data-query="parent">Parent Info</a>
+          <a href="../act-sign-up.html" data-query="student,parent">New Program</a>
+          <a href="..//Forms/ACT Daily Log/Daily Log.html" data-query="student">Daily Log</a>
+          <a href="../test-taker.html" data-path="student">Test Taker</a>
+          <a href="../payment.html" data-query="parent">Payments</a>
         </div>
       </nav>
       <main>
